1. Unity_File/Effect_Mac/Logs/AssetImportWorker0-prev.log
Using pre-set license

 COMMAND LINE ARGUMENTS:
/Applications/Unity/Unity.app/Contents/MacOS/Unity
-adb2
-batchMode
-noUpm
-name
AssetImportWorker0
-projectPath
/Users/jeongjin-yeong/Desktop/JungJinYeong/JinYeong_GitHub/1. Unity_File/Effect_Mac
-logFile
Logs/AssetImportWorker0.log
-srvPort
59380
Successfully changed project path to: /Users/jeongjin-yeong/Desktop/JungJinYeong/JinYeong_GitHub/1. Unity_File/Effect_Mac
/Users/jeongjin-yeong/Desktop/JungJinYeong/JinYeong_GitHub/1. Unity_File/Effect_Mac
Using Asset Import Pipeline V2.
Refreshing native plugins compatible for Editor in 43.48 ms, found 2 plugins.
Preloading 0 native plugins for Editor in 0.00 ms.
Initialize engine version: 2020.3.13f1 (71691879b7f5)
[Subsystems] Discovering subsystems at path /Applications/Unity/Unity.app/Contents/Resources/UnitySubsystems
[Subsystems] Discovering subsystems at path /Users/jeongjin-yeong/Desktop/JungJinYeong/JinYeong_GitHub/1. Unity_File/Effect_Mac/Assets
GfxDevice: creating device client; threaded=0
2022-08-24 01:04:29.503 Unity[36674:7435623] (null) preferred device: Apple M1 (high power)
2022-08-24 01:04:29.503 Unity[36674:7435623] Metal devices available: 1
2022-08-24 01:04:29.503 Unity[36674:7435623] 0: Apple M1 (high power)
2022-08-24 01:04:29.503 Unity[36674:7435623] Using device Apple M1 (high power)
Initializing Metal device caps: Apple M1
Initialize mono
Mono path[0] = '/Applications/Unity/Unity.app/Contents/Managed'
Mono path[1] = '/Applications/Unity/Unity.app/Contents/MonoBleedingEdge/lib/mono/unityjit'
Mono config path = '/Applications/Unity/Unity.app/Contents/MonoBleedingEdge/etc'
Using monoOptions --debugger-agent=transport=dt_socket,embedding=1,server=y,suspend=n,address=127.0.0.1:56674
Begin MonoManager ReloadAssembly
Registering precompiled unity dll's ...
Register platform support module: /Applications/Unity/Unity.app/Contents/PlaybackEngines/MacStandaloneSupport/UnityEditor.OSXStandalone.Extensions.dll
Registered in 0.001191 seconds.
Native extension for OSXStandalone target not found
Refreshing native plugins compatible for Editor in 41.48 ms, found 2 plugins.
Preloading 0 native plugins for Editor in 0.00 ms.
Mono: successfully reloaded assembly
- Completed reload, in  1.828 seconds
Platform modules already initialized, skipping
Registering precompiled user dll's ...
Registered in 0.002609 seconds.
Begin MonoManager ReloadAssembly
Native extension for OSXStandalone target not found
Refreshing native plugins compatible for Editor in 0.35 ms, found 2 plugins.
Preloading 0 native plugins for Editor in 0.00 ms.
Mono: successfully reloaded assembly
- Completed reload, in  1.850 seconds
Platform modules already initialized, skipping
========================================================================
Worker process is ready to serve import requests
Launching external process: /Applications/Unity/Unity.app/Contents/Tools/UnityShaderCompiler
Launched and connected shader compiler UnityShaderCompiler after 0.15 seconds
Compilation failed: 

program_source:22:38: error: use of undeclared identifier 'input'
    output.SV_Target0 = float4(uint4(input.SV_PrimitiveID0));
                                     ^



#include <metal_stdlib>
#include <metal_texture>
using namespace metal;
#if !(__HAVE_FMA__)
#define fma(a,b,c) ((a) * (b) + (c))
#endif
#ifndef XLT_REMAP_O
	#define XLT_REMAP_O {0, 1, 2, 3, 4, 5, 6, 7}
#endif
constexpr constant uint xlt_remap_o[] = XLT_REMAP_O;
struct Mtl_FragmentOut
{
    float4 SV_Target0 [[ color(xlt_remap_o[0]) ]];
};
fragment Mtl_FragmentOut xlatMtlMain(
)
{
    Mtl_FragmentOut output;
    output.SV_Target0 = float4(uint4(input.SV_PrimitiveID0));
    return output;
}
Refreshing native plugins compatible for Editor in 0.37 ms, found 2 plugins.
Preloading 0 native plugins for Editor in 0.00 ms.
Unloading 2162 Unused Serialized files (Serialized files now loaded: 0)
System memory in use before: 279.5 MB.
System memory in use after: 279.6 MB.

Unloading 18 unused Assets to reduce memory usage. Loaded Objects now: 2602.
Total: 4.153625 ms (FindLiveObjects: 0.148875 ms CreateObjectMapping: 0.045583 ms MarkObjects: 3.883041 ms  DeleteObjects: 0.075333 ms)

AssetImportParameters requested are different than current active one (requested -> active):
  custom:video-decoder-ogg-theora: a1e56fd34408186e4bbccfd4996cb3dc -> 
  custom:container-muxer-webm: aa71ff27fc2769a1b78a27578f13a17b -> 
  custom:container-demuxer-webm: 4f35f7cbe854078d1ac9338744f61a02 -> 
  custom:container-demuxer-ogg: 62fdf1f143b41e24485cea50d1cbac27 -> 
  custom:video-encoder-webm-vp8: eb34c28f22e8b96e1ab97ce403110664 -> 
  custom:framework-osx-AVFoundation: e770b220cccbd017edd2c1fefb359320 -> 
  custom:video-decoder-webm-vp8: 9c59270c3fd7afecdb556c50c9e8de78 -> 
  custom:audio-decoder-ogg-vorbis: bf7c407c2cedff20999df2af8eb42d56 -> 
  custom:audio-encoder-webm-vorbis: bf7c407c2cedff20999df2af8eb42d56 -> 
========================================================================
Received Import Request.
  path: Assets/3.Texture
  artifactKey: Guid(abe826b4fbbf24a99a08adfe2f332c3a) Importer(815301076,1909f56bfc062723c751e8b465ee728b)
Start importing Assets/3.Texture using Guid(abe826b4fbbf24a99a08adfe2f332c3a) Importer(815301076,1909f56bfc062723c751e8b465ee728b)  -> (artifact id: '49200d2b333fc68ee8df8b9b1892ed85') in 0.008030 seconds 
  Import took 0.011318 seconds .

========================================================================
Received Import Request.
  Time since last request: 0.000259 seconds.
  path: Assets/1.Shader
  artifactKey: Guid(46263b7ab1874410dbdabf136d55b5af) Importer(815301076,1909f56bfc062723c751e8b465ee728b)
Start importing Assets/1.Shader using Guid(46263b7ab1874410dbdabf136d55b5af) Importer(815301076,1909f56bfc062723c751e8b465ee728b)  -> (artifact id: '1fc0146ba4395b98fa251dd43be4f4e9') in 0.000516 seconds 
  Import took 0.002789 seconds .

========================================================================
Received Import Request.
  Time since last request: 38.997708 seconds.
  path: Assets/FXS_Add_Particle_1.shader
  artifactKey: Guid(e95adbec5db8441529717a26c4d94cb7) Importer(815301076,1909f56bfc062723c751e8b465ee728b)
Start importing Assets/FXS_Add_Particle_1.shader using Guid(e95adbec5db8441529717a26c4d94cb7) Importer(815301076,1909f56bfc062723c751e8b465ee728b)  -> (artifact id: '8f130b004015ca6e52a847f961836da8') in 0.192889 seconds 
  Import took 0.202589 seconds .

========================================================================
Received Import Request.
  Time since last request: 0.012733 seconds.
  path: Assets/FXS_Add_Particle_1.shader
  artifactKey: Guid(e95adbec5db8441529717a26c4d94cb7) Importer(815301076,1909f56bfc062723c751e8b465ee728b)
Start importing Assets/FXS_Add_Particle_1.shader using Guid(e95adbec5db8441529717a26c4d94cb7) Importer(815301076,1909f56bfc062723c751e8b465ee728b)  -> (artifact id: '8f130b004015ca6e52a847f961836da8') in 0.003548 seconds 
  Import took 0.006856 seconds .

========================================================================
Received Import Request.
  Time since last request: 42.968073 seconds.
  path: Assets/FXS_Add_Particle_1.shader
  artifactKey: Guid(e95adbec5db8441529717a26c4d94cb7) Importer(815301076,1909f56bfc062723c751e8b465ee728b)
Start importing Assets/FXS_Add_Particle_1.shader using Guid(e95adbec5db8441529717a26c4d94cb7) Importer(815301076,1909f56bfc062723c751e8b465ee728b)  -> (artifact id: '1676bf63b1f94b2df70279f47b75ce90') in 0.010087 seconds 
  Import took 0.019825 seconds .

